--- a/.github/workflows/make-pages.yml
+++ b/.github/workflows/make-pages.yml
@@ -18,7 +18,7 @@ jobs:
           tinytex: false
 
       - name: create docs
-        run: quarto render notebooks/ --output-dir ../_docs
+        run: quarto render nbs/ --output-dir ../_docs
 
       - name: deploy to GitHub pages
         uses: peaceiris/actions-gh-pages@v3
